[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "abstractai"
version = "0.1.0"
description = "Intelligent AI Model Selection and Management"
readme = "README.md"
authors = [
    {name = "Laurent-Philippe Albou", email = "contact@abstractcore.ai"}
]
maintainers = [
    {name = "Laurent-Philippe Albou", email = "contact@abstractcore.ai"}
]
keywords = ["ai", "llm", "machine-learning", "artificial-intelligence", "model-selection"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "abstractcore>=2.4.0",
]

[project.urls]
Homepage = "https://github.com/lpalbou/abstractai"
Documentation = "https://github.com/lpalbou/abstractai#readme"
Repository = "https://github.com/lpalbou/abstractai"
Issues = "https://github.com/lpalbou/abstractai/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["abstractai*"]

[tool.setuptools.package-data]
abstractai = ["py.typed"]
